--- a/conf.d/default.conf
+++ b/conf.d/default.conf
@@ -9,7 +9,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    location .well-known {
+    location /.well-known {
         root /var/www;
     }
 }
