--- a/scripts/http.conf
+++ b/scripts/http.conf
@@ -1,9 +1,9 @@
 server {
     listen 80;
-    server_name test.staging.nagradion.ru;
+    server_name {DOMAIN};
 
     location / {
-        proxy_pass http://localhost:8085;
+        proxy_pass http://localhost:{PORT};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -13,3 +13,4 @@ server {
         root /var/www;
     }
 }
+
