--- a/scripts/https.conf
+++ b/scripts/https.conf
@@ -3,8 +3,8 @@ server {
 
     server_name {DOMAIN};
 
-    ssl_certificate           /etc/nginx/certs/{DOMAIN}/fullchain.pem;
-    ssl_certificate_key       /etc/nginx/certs/{DOMAIN}/privkey.pem;
+    ssl_certificate           /etc/letsencrypt/live/{DOMAIN}/fullchain.pem;
+    ssl_certificate_key       /etc/letsencrypt/live/{DOMAIN}/privkey.pem;
 
     location / {
         proxy_pass https://localhost:{PORT};
