Add client_max_body_size 32m

--- a/scripts/http.conf
+++ b/scripts/http.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name {DOMAIN};
 
+    client_max_body_size 32m;
+
     location / {
         proxy_pass http://localhost:{PORT};
         proxy_set_header Host $host;
