--- a/scripts/https.conf
+++ b/scripts/https.conf
@@ -1,7 +1,8 @@
 server {
     listen 443 ssl http2;
-
     server_name {DOMAIN};
+
+    client_max_body_size 32m;
 
     ssl_certificate           /etc/letsencrypt/live/{DOMAIN}/fullchain.pem;
     ssl_certificate_key       /etc/letsencrypt/live/{DOMAIN}/privkey.pem;
