--- a/scripts/http.conf
+++ b/scripts/http.conf
@@ -5,7 +5,7 @@ server {
     client_max_body_size 32m;
 
     location / {
-        proxy_pass http://localhost:{PORT};
+        proxy_pass http://127.0.0.1:{PORT};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
