--- a/scripts/https.conf
+++ b/scripts/https.conf
@@ -8,7 +8,7 @@ server {
     ssl_certificate_key       /etc/letsencrypt/live/{DOMAIN}/privkey.pem;
 
     location / {
-        proxy_pass {PROTOCOL}://localhost:{PORT};
+        proxy_pass {PROTOCOL}://127.0.0.1:{PORT};
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
