--- a/scripts/http.conf
+++ b/scripts/http.conf
@@ -2,17 +2,15 @@ server {
     listen 80;
     server_name {DOMAIN};
 
-    client_max_body_size 32m;
-
-    location / {
-        proxy_pass http://127.0.0.1:{PORT};
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
+    
     location /.well-known {
         root /var/www;
     }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+
 }
 
