--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
             - ./scripts:/scripts
             - ./config:/config
 
+        depends_on:
+            - nginx
         entrypoint: sh -c
         command: certbot renew
 
