--- a/manual-configuration-files/default.conf
+++ b/manual-configuration-files/default.conf
@@ -1,4 +1,9 @@
 server {
     listen 80;
     server_name localhost;
+
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
+        expires max;
+        log_not_found off;
+    }
 }
