--- a/manual-configuration-files/default.conf
+++ b/manual-configuration-files/default.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     server_name localhost;
+    index index.html;
+    #root /var/www/sites/static/domain-name;
 
     location ~* \.(js|css|png|jpg|jpeg|gif|ico)$ {
         expires max;
